--- a/code/data_acquisition_1.ipynb
+++ b/code/data_acquisition_1.ipynb
@@ -4188,7 +4188,297 @@
       "Info downloaded for book 3820 of 15000 books.\n",
       "Info downloaded for book 3821 of 15000 books.\n",
       "Info downloaded for book 3822 of 15000 books.\n",
-      "Info downloaded for book 3823 of 15000 books.\n"
+      "Info downloaded for book 3823 of 15000 books.\n",
+      "Info downloaded for book 3824 of 15000 books.\n",
+      "Info downloaded for book 3825 of 15000 books.\n",
+      "Info downloaded for book 3826 of 15000 books.\n",
+      "Info downloaded for book 3827 of 15000 books.\n",
+      "Info downloaded for book 3828 of 15000 books.\n",
+      "Info downloaded for book 3829 of 15000 books.\n",
+      "Info downloaded for book 3830 of 15000 books.\n",
+      "Info downloaded for book 3831 of 15000 books.\n",
+      "Info downloaded for book 3832 of 15000 books.\n",
+      "Info downloaded for book 3833 of 15000 books.\n",
+      "Info downloaded for book 3834 of 15000 books.\n",
+      "Info downloaded for book 3835 of 15000 books.\n",
+      "Info downloaded for book 3836 of 15000 books.\n",
+      "Info downloaded for book 3837 of 15000 books.\n",
+      "Info downloaded for book 3838 of 15000 books.\n",
+      "Info downloaded for book 3839 of 15000 books.\n",
+      "Info downloaded for book 3840 of 15000 books.\n",
+      "Info downloaded for book 3841 of 15000 books.\n",
+      "Info downloaded for book 3842 of 15000 books.\n",
+      "Info downloaded for book 3843 of 15000 books.\n",
+      "Info downloaded for book 3844 of 15000 books.\n",
+      "Info downloaded for book 3845 of 15000 books.\n",
+      "Info downloaded for book 3846 of 15000 books.\n",
+      "Info downloaded for book 3847 of 15000 books.\n",
+      "Info downloaded for book 3848 of 15000 books.\n",
+      "Info downloaded for book 3849 of 15000 books.\n",
+      "Info downloaded for book 3850 of 15000 books.\n",
+      "Info downloaded for book 3851 of 15000 books.\n",
+      "Info downloaded for book 3852 of 15000 books.\n",
+      "Info downloaded for book 3853 of 15000 books.\n",
+      "Info downloaded for book 3854 of 15000 books.\n",
+      "Info downloaded for book 3855 of 15000 books.\n",
+      "Info downloaded for book 3856 of 15000 books.\n",
+      "Info downloaded for book 3857 of 15000 books.\n",
+      "Info downloaded for book 3858 of 15000 books.\n",
+      "Info downloaded for book 3859 of 15000 books.\n",
+      "Info downloaded for book 3860 of 15000 books.\n",
+      "Info downloaded for book 3861 of 15000 books.\n",
+      "Info downloaded for book 3862 of 15000 books.\n",
+      "Info downloaded for book 3863 of 15000 books.\n",
+      "Info downloaded for book 3864 of 15000 books.\n",
+      "Info downloaded for book 3865 of 15000 books.\n",
+      "Info downloaded for book 3866 of 15000 books.\n",
+      "Info downloaded for book 3867 of 15000 books.\n",
+      "Info downloaded for book 3868 of 15000 books.\n",
+      "Info downloaded for book 3869 of 15000 books.\n",
+      "Info downloaded for book 3870 of 15000 books.\n",
+      "Info downloaded for book 3871 of 15000 books.\n",
+      "Info downloaded for book 3872 of 15000 books.\n",
+      "Info downloaded for book 3873 of 15000 books.\n",
+      "Info downloaded for book 3874 of 15000 books.\n",
+      "Info downloaded for book 3875 of 15000 books.\n",
+      "Info downloaded for book 3876 of 15000 books.\n",
+      "Info downloaded for book 3877 of 15000 books.\n",
+      "Info downloaded for book 3878 of 15000 books.\n",
+      "Info downloaded for book 3879 of 15000 books.\n",
+      "Info downloaded for book 3880 of 15000 books.\n",
+      "Info downloaded for book 3881 of 15000 books.\n",
+      "Info downloaded for book 3882 of 15000 books.\n",
+      "Info downloaded for book 3883 of 15000 books.\n",
+      "Info downloaded for book 3884 of 15000 books.\n",
+      "Info downloaded for book 3885 of 15000 books.\n",
+      "Info downloaded for book 3886 of 15000 books.\n",
+      "Info downloaded for book 3887 of 15000 books.\n",
+      "Info downloaded for book 3888 of 15000 books.\n",
+      "Info downloaded for book 3889 of 15000 books.\n",
+      "Info downloaded for book 3890 of 15000 books.\n",
+      "Info downloaded for book 3891 of 15000 books.\n",
+      "Info downloaded for book 3892 of 15000 books.\n",
+      "Info downloaded for book 3893 of 15000 books.\n",
+      "Info downloaded for book 3894 of 15000 books.\n",
+      "Info downloaded for book 3895 of 15000 books.\n",
+      "Info downloaded for book 3896 of 15000 books.\n",
+      "Info downloaded for book 3897 of 15000 books.\n",
+      "Info downloaded for book 3898 of 15000 books.\n",
+      "Info downloaded for book 3899 of 15000 books.\n",
+      "Info downloaded for book 3900 of 15000 books.\n",
+      "Info downloaded for book 3901 of 15000 books.\n",
+      "Info downloaded for book 3902 of 15000 books.\n",
+      "Info downloaded for book 3903 of 15000 books.\n",
+      "Info downloaded for book 3904 of 15000 books.\n",
+      "Info downloaded for book 3905 of 15000 books.\n",
+      "Info downloaded for book 3906 of 15000 books.\n",
+      "Info downloaded for book 3907 of 15000 books.\n",
+      "Info downloaded for book 3908 of 15000 books.\n",
+      "Info downloaded for book 3909 of 15000 books.\n",
+      "Info downloaded for book 3910 of 15000 books.\n",
+      "Info downloaded for book 3911 of 15000 books.\n",
+      "Info downloaded for book 3912 of 15000 books.\n",
+      "Info downloaded for book 3913 of 15000 books.\n",
+      "Info downloaded for book 3914 of 15000 books.\n",
+      "Info downloaded for book 3915 of 15000 books.\n",
+      "Info downloaded for book 3916 of 15000 books.\n",
+      "Info downloaded for book 3917 of 15000 books.\n",
+      "Info downloaded for book 3918 of 15000 books.\n",
+      "Info downloaded for book 3919 of 15000 books.\n",
+      "Info downloaded for book 3920 of 15000 books.\n",
+      "Info downloaded for book 3921 of 15000 books.\n",
+      "Info downloaded for book 3922 of 15000 books.\n",
+      "Info downloaded for book 3923 of 15000 books.\n",
+      "Info downloaded for book 3924 of 15000 books.\n",
+      "Info downloaded for book 3925 of 15000 books.\n",
+      "Info downloaded for book 3926 of 15000 books.\n",
+      "Info downloaded for book 3927 of 15000 books.\n",
+      "Info downloaded for book 3928 of 15000 books.\n",
+      "Info downloaded for book 3929 of 15000 books.\n",
+      "Info downloaded for book 3930 of 15000 books.\n",
+      "Info downloaded for book 3931 of 15000 books.\n",
+      "Info downloaded for book 3932 of 15000 books.\n",
+      "Info downloaded for book 3933 of 15000 books.\n",
+      "Info downloaded for book 3934 of 15000 books.\n",
+      "Info downloaded for book 3935 of 15000 books.\n",
+      "Info downloaded for book 3936 of 15000 books.\n",
+      "Info downloaded for book 3937 of 15000 books.\n",
+      "Info downloaded for book 3938 of 15000 books.\n",
+      "Info downloaded for book 3939 of 15000 books.\n",
+      "Info downloaded for book 3940 of 15000 books.\n",
+      "Info downloaded for book 3941 of 15000 books.\n",
+      "Info downloaded for book 3942 of 15000 books.\n",
+      "Info downloaded for book 3943 of 15000 books.\n",
+      "Info downloaded for book 3944 of 15000 books.\n",
+      "Info downloaded for book 3945 of 15000 books.\n",
+      "Info downloaded for book 3946 of 15000 books.\n",
+      "Info downloaded for book 3947 of 15000 books.\n",
+      "Info downloaded for book 3948 of 15000 books.\n",
+      "Info downloaded for book 3949 of 15000 books.\n",
+      "Info downloaded for book 3950 of 15000 books.\n",
+      "Info downloaded for book 3951 of 15000 books.\n",
+      "Info downloaded for book 3952 of 15000 books.\n",
+      "Info downloaded for book 3953 of 15000 books.\n",
+      "Info downloaded for book 3954 of 15000 books.\n",
+      "Info downloaded for book 3955 of 15000 books.\n",
+      "Info downloaded for book 3956 of 15000 books.\n",
+      "Info downloaded for book 3957 of 15000 books.\n",
+      "Info downloaded for book 3958 of 15000 books.\n",
+      "Info downloaded for book 3959 of 15000 books.\n",
+      "Info downloaded for book 3960 of 15000 books.\n",
+      "Info downloaded for book 3961 of 15000 books.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info downloaded for book 3962 of 15000 books.\n",
+      "Info downloaded for book 3963 of 15000 books.\n",
+      "Info downloaded for book 3964 of 15000 books.\n",
+      "Info downloaded for book 3965 of 15000 books.\n",
+      "Info downloaded for book 3966 of 15000 books.\n",
+      "Info downloaded for book 3967 of 15000 books.\n",
+      "Info downloaded for book 3968 of 15000 books.\n",
+      "Info downloaded for book 3969 of 15000 books.\n",
+      "Info downloaded for book 3970 of 15000 books.\n",
+      "Info downloaded for book 3971 of 15000 books.\n",
+      "Info downloaded for book 3972 of 15000 books.\n",
+      "Info downloaded for book 3973 of 15000 books.\n",
+      "Info downloaded for book 3974 of 15000 books.\n",
+      "Info downloaded for book 3975 of 15000 books.\n",
+      "Info downloaded for book 3976 of 15000 books.\n",
+      "Info downloaded for book 3977 of 15000 books.\n",
+      "Info downloaded for book 3978 of 15000 books.\n",
+      "Info downloaded for book 3979 of 15000 books.\n",
+      "Info downloaded for book 3980 of 15000 books.\n",
+      "Info downloaded for book 3981 of 15000 books.\n",
+      "Info downloaded for book 3982 of 15000 books.\n",
+      "Info downloaded for book 3983 of 15000 books.\n",
+      "Info downloaded for book 3984 of 15000 books.\n",
+      "Info downloaded for book 3985 of 15000 books.\n",
+      "Info downloaded for book 3986 of 15000 books.\n",
+      "Info downloaded for book 3987 of 15000 books.\n",
+      "Info downloaded for book 3988 of 15000 books.\n",
+      "Info downloaded for book 3989 of 15000 books.\n",
+      "Info downloaded for book 3990 of 15000 books.\n",
+      "Info downloaded for book 3991 of 15000 books.\n",
+      "Info downloaded for book 3992 of 15000 books.\n",
+      "Info downloaded for book 3993 of 15000 books.\n",
+      "Info downloaded for book 3994 of 15000 books.\n",
+      "Info downloaded for book 3995 of 15000 books.\n",
+      "Info downloaded for book 3996 of 15000 books.\n",
+      "Info downloaded for book 3997 of 15000 books.\n",
+      "Info downloaded for book 3998 of 15000 books.\n",
+      "Info downloaded for book 3999 of 15000 books.\n",
+      "Info downloaded for book 4000 of 15000 books.\n",
+      "Info downloaded for book 4001 of 15000 books.\n",
+      "Info downloaded for book 4002 of 15000 books.\n",
+      "Info downloaded for book 4003 of 15000 books.\n",
+      "Info downloaded for book 4004 of 15000 books.\n",
+      "Info downloaded for book 4005 of 15000 books.\n",
+      "Info downloaded for book 4006 of 15000 books.\n",
+      "Info downloaded for book 4007 of 15000 books.\n",
+      "Info downloaded for book 4008 of 15000 books.\n",
+      "Info downloaded for book 4009 of 15000 books.\n",
+      "Info downloaded for book 4010 of 15000 books.\n",
+      "Info downloaded for book 4011 of 15000 books.\n",
+      "Info downloaded for book 4012 of 15000 books.\n",
+      "Info downloaded for book 4013 of 15000 books.\n",
+      "Info downloaded for book 4014 of 15000 books.\n",
+      "Info downloaded for book 4015 of 15000 books.\n",
+      "Info downloaded for book 4016 of 15000 books.\n",
+      "Info downloaded for book 4017 of 15000 books.\n",
+      "Info downloaded for book 4018 of 15000 books.\n",
+      "Info downloaded for book 4019 of 15000 books.\n",
+      "Info downloaded for book 4020 of 15000 books.\n",
+      "Info downloaded for book 4021 of 15000 books.\n",
+      "Info downloaded for book 4022 of 15000 books.\n",
+      "Info downloaded for book 4023 of 15000 books.\n",
+      "Info downloaded for book 4024 of 15000 books.\n",
+      "Info downloaded for book 4025 of 15000 books.\n",
+      "Info downloaded for book 4026 of 15000 books.\n",
+      "Info downloaded for book 4027 of 15000 books.\n",
+      "Info downloaded for book 4028 of 15000 books.\n",
+      "Info downloaded for book 4029 of 15000 books.\n",
+      "Info downloaded for book 4030 of 15000 books.\n",
+      "Info downloaded for book 4031 of 15000 books.\n",
+      "Info downloaded for book 4032 of 15000 books.\n",
+      "Info downloaded for book 4033 of 15000 books.\n",
+      "Info downloaded for book 4034 of 15000 books.\n",
+      "Info downloaded for book 4035 of 15000 books.\n",
+      "Info downloaded for book 4036 of 15000 books.\n",
+      "Info downloaded for book 4037 of 15000 books.\n",
+      "Info downloaded for book 4038 of 15000 books.\n",
+      "Info downloaded for book 4039 of 15000 books.\n",
+      "Info downloaded for book 4040 of 15000 books.\n",
+      "Info downloaded for book 4041 of 15000 books.\n",
+      "Info downloaded for book 4042 of 15000 books.\n",
+      "Info downloaded for book 4043 of 15000 books.\n",
+      "Info downloaded for book 4044 of 15000 books.\n",
+      "Info downloaded for book 4045 of 15000 books.\n",
+      "Info downloaded for book 4046 of 15000 books.\n",
+      "Info downloaded for book 4047 of 15000 books.\n",
+      "Info downloaded for book 4048 of 15000 books.\n",
+      "Info downloaded for book 4049 of 15000 books.\n",
+      "Info downloaded for book 4050 of 15000 books.\n",
+      "Info downloaded for book 4051 of 15000 books.\n",
+      "Info downloaded for book 4052 of 15000 books.\n",
+      "Info downloaded for book 4053 of 15000 books.\n",
+      "Info downloaded for book 4054 of 15000 books.\n",
+      "Info downloaded for book 4055 of 15000 books.\n",
+      "Info downloaded for book 4056 of 15000 books.\n",
+      "Info downloaded for book 4057 of 15000 books.\n",
+      "Info downloaded for book 4058 of 15000 books.\n",
+      "Info downloaded for book 4059 of 15000 books.\n",
+      "Info downloaded for book 4060 of 15000 books.\n",
+      "Info downloaded for book 4061 of 15000 books.\n",
+      "Info downloaded for book 4062 of 15000 books.\n",
+      "Info downloaded for book 4063 of 15000 books.\n",
+      "Info downloaded for book 4064 of 15000 books.\n",
+      "Info downloaded for book 4065 of 15000 books.\n",
+      "Info downloaded for book 4066 of 15000 books.\n",
+      "Info downloaded for book 4067 of 15000 books.\n",
+      "Info downloaded for book 4068 of 15000 books.\n",
+      "Info downloaded for book 4069 of 15000 books.\n",
+      "Info downloaded for book 4070 of 15000 books.\n",
+      "Info downloaded for book 4071 of 15000 books.\n",
+      "Info downloaded for book 4072 of 15000 books.\n",
+      "Info downloaded for book 4073 of 15000 books.\n",
+      "Info downloaded for book 4074 of 15000 books.\n",
+      "Info downloaded for book 4075 of 15000 books.\n",
+      "Info downloaded for book 4076 of 15000 books.\n",
+      "Info downloaded for book 4077 of 15000 books.\n",
+      "Info downloaded for book 4078 of 15000 books.\n",
+      "Info downloaded for book 4079 of 15000 books.\n",
+      "Info downloaded for book 4080 of 15000 books.\n",
+      "Info downloaded for book 4081 of 15000 books.\n",
+      "Info downloaded for book 4082 of 15000 books.\n",
+      "Info downloaded for book 4083 of 15000 books.\n",
+      "Info downloaded for book 4084 of 15000 books.\n",
+      "Info downloaded for book 4085 of 15000 books.\n",
+      "Info downloaded for book 4086 of 15000 books.\n",
+      "Info downloaded for book 4087 of 15000 books.\n",
+      "Info downloaded for book 4088 of 15000 books.\n",
+      "Info downloaded for book 4089 of 15000 books.\n",
+      "Info downloaded for book 4090 of 15000 books.\n",
+      "Info downloaded for book 4091 of 15000 books.\n",
+      "Info downloaded for book 4092 of 15000 books.\n",
+      "Info downloaded for book 4093 of 15000 books.\n",
+      "Info downloaded for book 4094 of 15000 books.\n",
+      "Info downloaded for book 4095 of 15000 books.\n",
+      "Info downloaded for book 4096 of 15000 books.\n",
+      "Info downloaded for book 4097 of 15000 books.\n",
+      "Info downloaded for book 4098 of 15000 books.\n",
+      "Info downloaded for book 4099 of 15000 books.\n",
+      "Info downloaded for book 4100 of 15000 books.\n",
+      "Info downloaded for book 4101 of 15000 books.\n",
+      "Info downloaded for book 4102 of 15000 books.\n",
+      "Info downloaded for book 4103 of 15000 books.\n",
+      "Info downloaded for book 4104 of 15000 books.\n",
+      "Info downloaded for book 4105 of 15000 books.\n",
+      "Info downloaded for book 4106 of 15000 books.\n",
+      "Info downloaded for book 4107 of 15000 books.\n"
      ]
     }
    ],
