4th project check-in 2020-05-15

--- a/code/1_data_acquisition.ipynb
+++ b/code/1_data_acquisition.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# #readMoreCanlit | Notebook 2: Data acquisition"
+    "# #readMoreCanlit | Notebook 1: Data acquisition"
    ]
   },
   {
@@ -18,6 +18,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a name=\"contents\"></a>\n",
+    "## Contents\n",
+    "\n",
+    "* <a href=\"#overview\">Overview</a><br>\n",
+    "* <a href=\"#imports\">Imports</a><br>\n",
+    "* <a href=\"#data-sources\">Data sources</a><br>\n",
+    "* <a href=\"#get-international-book-metadata\">Get international book metadata</a><br>\n",
+    "* <a href=\"#get-canadian-book-metadata\">Get Canadian book metadata</a><br>\n",
+    "* <a href=\"#get-canadian-book-cover-art\">Get Canadian book cover art</a><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"overview\"></a>\n",
     "## Overview"
    ]
   },
@@ -42,7 +58,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Imports"
+    "<div style=\"text-align: right\">(<a href=\"#contents\">home</a>) </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"imports\"></a>\n",
+    "## Imports"
    ]
   },
   {
@@ -55,23 +79,38 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "pd.options.display.max_seq_items = 2000\n",
-    "pd.options.display.max_rows = 4000\n",
-    "\n",
     "# other imports\n",
     "from bs4 import BeautifulSoup\n",
     "import json\n",
     "import requests\n",
     "import time\n",
     "import urllib.request\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "\n",
+    "pd.options.display.max_seq_items = 2000\n",
+    "pd.options.display.max_rows = 4000"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right\">(<a href=\"#contents\">home</a>) </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"get-international-book-metadata\"></a>\n",
     "## Get international book metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section of the notebook, I use the ISBNdb.com API to query their database with a long list of ISBNs. The code in this section was rerun many times over a period of days. To run this code, you will need to uncomment it, acquire your own API code and membership to ISBNdb.com. The assembled data is in the repo in the /data folder."
    ]
   },
   {
@@ -27279,7 +27318,7 @@
     "\n",
     "# for j in range(len(isbn)):\n",
     "\n",
-    "#     header = {'Authorization': '44023_23ab132f3977ad9849e8f1a5d7dc73bf'}\n",
+    "#     header = {'Authorization': 'YOUR API KEY HERE'}\n",
     "#     base_url = ('https://api2.isbndb.com/book/')\n",
     "#     response = requests.get(base_url + isbn['isbn'][j], headers=header)\n",
     "#     payload = response.json()\n",
@@ -27333,7 +27372,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right\">(<a href=\"#contents\">home</a>) </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"get-canadian-book-metadata\"></a>\n",
     "## Get Canadian book metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section of the notebook, I connect to the website 49thshelf.com in order to access descriptions of Canadian books used by the model. Uncomment the relevant code to run the download process. This code only needs to be run once, but it will take about 24 hours to complete. The data is in the repo in the /data folder."
    ]
   },
   {
@@ -27364,25 +27418,25 @@
     "# Grab the URL where the book description lives and use beautifulsoup\n",
     "# to grab the relevant content; at the end, write it all back to the dataframe\n",
     "\n",
-    "description_list = []\n",
+    "# description_list = []\n",
     "\n",
-    "for c in (range(len(canadian))):\n",
-    "    response = requests.get(canadian['title_url'][c])\n",
-    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "# for c in (range(len(canadian))):\n",
+    "#     response = requests.get(canadian['title_url'][c])\n",
+    "#     soup = BeautifulSoup(response.text, 'html.parser')\n",
     "    \n",
-    "    try:\n",
-    "        for tag in soup.find_all(\"meta\"):\n",
-    "            if tag.get(\"property\", None) == \"og:description\":\n",
-    "                print(tag.get(\"content\", None))\n",
-    "                description = tag.get(\"content\", None)\n",
-    "                description_list.append(description)\n",
-    "    except:\n",
-    "        description_list.append(np.nan)\n",
+    "#     try:\n",
+    "#         for tag in soup.find_all(\"meta\"):\n",
+    "#             if tag.get(\"property\", None) == \"og:description\":\n",
+    "#                 print(tag.get(\"content\", None))\n",
+    "#                 description = tag.get(\"content\", None)\n",
+    "#                 description_list.append(description)\n",
+    "#     except:\n",
+    "#         description_list.append(np.nan)\n",
     "        \n",
     "        \n",
-    "    time.sleep(2)\n",
+    "#     time.sleep(2)\n",
     "        \n",
-    "canadian['description'] = description_list"
+    "# canadian['description'] = description_list"
    ]
   },
   {
@@ -27408,18 +27462,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "canadian = pd.read_csv('../data/processed/canadian_books.csv')\n",
+    "canadian = pd.read_csv('../data/processed/canadian_pre.csv')\n",
     "\n",
     "# Remove duplicate entries from the dataframe\n",
     "canadian = canadian.drop_duplicates(subset='title', keep=\"first\")\n",
-    "canadian.to_csv('../data/processed/canadian_books.csv', index = False)"
+    "canadian.to_csv('../data/processed/canadian_pre.csv', index = False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right\">(<a href=\"#contents\">home</a>) </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"get-canadian-book-cover-art\"></a>\n",
     "## Get Canadian book cover art"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section, I use the data assembled in the previous section, which included URLs for cover images of the books. Running this process would involve uncommenting the code, and waiting for the downloads, which take about 24 hours, to complete. "
    ]
   },
   {
@@ -34399,16 +34468,16 @@
     }
    ],
    "source": [
-    "for i in range(len(images)):\n",
+    "# for i in range(len(images)):\n",
     "\n",
-    "    try:\n",
-    "        urllib.request.urlretrieve(images['image'][i], '../img/books/' + images['id'][i] + '.jpg')\n",
-    "        print('Just captured image number ' + images['id'][i])\n",
+    "#     try:\n",
+    "#         urllib.request.urlretrieve(images['image'][i], '../img/books/' + images['id'][i] + '.jpg')\n",
+    "#         print('Just captured image number ' + images['id'][i])\n",
     "\n",
-    "    except:\n",
-    "        print('Failed to capture image number ' + images['id'][i])\n",
+    "#     except:\n",
+    "#         print('Failed to capture image number ' + images['id'][i])\n",
     "        \n",
-    "    time.sleep(2)\n"
+    "#     time.sleep(2)\n"
    ]
   },
   {
@@ -34417,7 +34486,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images.drop(columns='image', inplace=True)"
+    "# Drop the column with the image URLs as it's no longer needed\n",
+    "images.drop(columns='image', inplace=True)\n",
+    "\n",
+    "# And resave to the file\n",
+    "images.to_csv('../data/processed/canadian_books.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Through running the processes in this notebook as many times as needed, I was about to build a database of 6,500+ Canadian titles and 10,000+ international titles. Next, they will go through some feature engineering and preprocessing to become ready to be run through the TFIDF Vectorizer (which will change the words into numerical values that a model can understand and compare with one another. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: right\">(<a href=\"#contents\">home</a>) </div>"
    ]
   }
  ],
